--- a/page_3.html
+++ b/page_3.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8" />
         <meta name="description" content="Evaluación diagnóstica de Introducción al Desarrollo Front End con HTML, CSS y JavaScript" />
         <meta name="keywords" content="HTML, CSS, JavaScript" />
-        <meta name="author" content="Nombre Apellido" />
+        <meta name="author" content="Fabiola Sánchez" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="style.css" rel="stylesheet" />
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <title>Evaluadión diagnóstica</title>
+        <title>Luz</title>
     </head>
     <body>
         <div id="uno"><a href="index.html">PORTADA</a></div>
